[gd_scene load_steps=6 format=2]

[ext_resource path="res://InputMap/KeyRebind.gd" type="Script" id=1]
[ext_resource path="res://InputMap/ButtonHolder.gd" type="Script" id=2]
[ext_resource path="res://InputMap/InputMapper.gd" type="Script" id=3]
[ext_resource path="res://InputMap/KeySelectPopup.gd" type="Script" id=4]
[ext_resource path="res://resources/Font01.tres" type="DynamicFont" id=5]

[node name="KeyRebind" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RebindLabel" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 480.0
margin_bottom = 58.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Rebind Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="GridContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 480.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource( 2 )

[node name="DoneButton" type="Button" parent="VBoxContainer"]
margin_left = 208.0
margin_top = 193.0
margin_right = 271.0
margin_bottom = 223.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 5 )
text = "Done"

[node name="Below" type="Control" parent="VBoxContainer"]
margin_top = 227.0
margin_right = 480.0
margin_bottom = 320.0
size_flags_vertical = 3

[node name="KeySelectPopup" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -75.5
margin_right = 120.0
margin_bottom = 75.5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="KeySelectPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="KeySelectPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
text = "Press a key.."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMapper" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
